# data-model

./: .CPPLINT.cfg  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  REUSE.toml  pixi.toml
.github/workflows/: build-test.yml  doxygen.yml  lint.yml  release.yml  update-lock-files.yml
cmake/: SHiPDataModelConfig.cmake.in
docs/: hierarchy.md
doxygen/: Doxyfile
include/SHiP/: LinkDef.h  MCParticle.hpp  QuantityView.hpp  RecHit.hpp  RecParticle.hpp  SimHit.hpp  SimParticle.hpp  SimResult.hpp  TrackFitResult.hpp  Units.hpp
include/SHiP/detectors/: CaloHit.hpp  SBTHit.hpp  StrawTubesHit.hpp  TimeDetHit.hpp  UBTHit.hpp  detector_id.hpp
scripts/: release.sh
tests/: CMakeLists.txt  test_rntuple_io.cpp  test_ttree_io.cpp  test_units.cpp  test_utils.hpp
